# tapLock-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/py-examples/: .gitignore  pyproject.toml  using_middleware.py
py/taplock/: Cargo.toml  README.md  pyproject.toml
py/taplock-py/: Cargo.toml  pyproject.toml  secure_api.py
py/taplock-py/src/: lib.rs
py/taplock-py/taplock/: fastapi.py
py/taplock/examples/: secure_api.py
py/taplock/src/: lib.rs
py/taplock/taplock/: __init__.py  fastapi.py
r/taplock/: DESCRIPTION  NAMESPACE  README.md  bootstrap.R  cleanup.R  justfile
r/taplock/R/: auth.R  entra_id.R  extendr-wrappers.R  google.R  keycloak.R  shiny.R
r/taplock/example/entra_id/: app.R
r/taplock/example/google/: app.R
r/taplock/example/keycloak/: app.R
r/taplock/man/: new_entra_id_config_from_env.Rd  new_google_config_from_env.Rd  new_keycloak_config_from_env.Rd  new_openid_config.Rd
r/taplock/src/: Makevars.in  Makevars.win.in
r/taplock/src/rust/: Cargo.toml
r/taplock/src/rust/src/: lib.rs
r/taplock/tests/testthat/: test-parse_cookies.R
r/taplock/tools/: config.R
rs/taplock/: Cargo.toml  README.md
rs/taplock/src/: error.rs  extendr.rs  lib.rs
rs/taplock/src/auth/: axum.rs  entra_id.rs  google.rs  jwks.rs  keycloak.rs  mod.rs
