[workspace]
resolver = "2"
members = [
    "rs/taplock",
    "r/taplock/src/rust",
    "py/taplock-py",
]


[workspace.dependencies]
async-trait = "0.1.89"
cookie = "0.18.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.43"
url = "2.5.7"
extendr-api = { version = '0.8.1' }


[profile.release]
lto = true
codegen-units = 1
