[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "taplock-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi",
]
dynamic = ["version"]

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
